# ESP-MoNet

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README.zh-CN.md  README_zh.md  camera_uart_test.py  connect_server.sh  copyc.sh  organize-components.ps1  partitions.csv  sdkconfig  sdkconfig.default  setup.sh
.github/workflows/: ci.yml
backup/: backup.c  ble_service.c  https_server.c  https_server_ota.c  main.c  main_past.c  test_print_boardcast.cpp  uart_handler.c  uart_handler.h
backup/bsp/: CMakeLists.txt
backup/bsp/include/bsp/: light_sensor_driver.h  uart_handler.h  wifi_manager.h
backup/bsp/src/: light_sensor_driver.c  wifi_manager.c
components/OTA/: CMakeLists.txt
components/OTA/src/: https_ota_service.c
components/bsp/: CMakeLists.txt  uart_handler.c
components/bsp/src/: light_sensor_driver.c  uart_handler.c  wifi_manager.c
components/codec/: CMakeLists.txt
components/codec/include/codec/: json_encoder.h
components/codec/src/: json_encoder.c
components/config/include/: config.h
components/core/: CMakeLists.txt
components/core/include/core/: msg_bus.h
components/core/src/: msg_bus.c
components/hal/: CMakeLists.txt
components/hal/src/: adc_hal.c  wifi_hal.c
components/monet_codec/: CMakeLists.txt
components/monet_codec/include/monet_codec/: json_encoder.h
components/monet_codec/src/: json_encoder.c
components/monet_core/: CMakeLists.txt  Kconfig
components/monet_core/include/monet_core/: msg_bus.h  service_registry.h
components/monet_core/include_cpp/monet_core_cpp/: CameraFrame.hpp  LockGuard.hpp  LogMessage.hpp  LoggerBackend.hpp  LoggerService.hpp  MessageBus.hpp  Queue.hpp  TaskHealthMonitor.hpp  WebLoggerBackend.hpp  button_isr_demo.h  cpp_demo.h  message_bus_capi.h
components/monet_core/ld/: service_registry.ld
components/monet_core/src/: msg_bus.c  service_registry.c
components/monet_core/src_cpp/: CameraFrame.cpp  Logger.cpp  LoggerService.cpp  MessageBus.cpp  TaskHealthMonitor.cpp  WebLoggerBackend.cpp  button_isr_demo.cpp  cpp_demo.cpp  logger_demo.cpp
components/monet_hal/: Kconfig
components/monet_hal/include/monet_hal/: adc_hal.h  camera_hal.h  dht22_hal.h  uart_hal.h  wifi_hal.h
components/monet_hal/src/: adc_hal.c  camera_hal.c  dht22_hal.c  uart_hal.c  wifi_hal.c
components/my_hal/: CMakeLists.txt
components/my_hal/include/my_hal/: adc_hal.h  camera_hal.h  dht22_hal.h  uart_hal.h  wifi_hal.h
components/my_hal/src/: adc_hal.c  camera_hal.c  dht22_hal.c  uart_hal.c  wifi_hal.c
components/net/: CMakeLists.txt  Kconfig
components/net/certs/: server_ca.pem
components/net/include/net/: https_post.h  https_post_hal.h
components/net/src/: https_post.c  https_post_hal.c
components/service/: CMakeLists.txt  Kconfig  data_reporter.c  uart_service.c  wifi_service.c
components/service/include/service/: ble_service.h  camera_service.h  data_reporter.h  data_uploader_service.h  dht22_service.h  http_uploader_service.h  light_sensor_service.h  mjpeg_service.h  uart_service.h  wifi_service.h
components/service/src/: ble_service.c  camera_service.c  data_reporter.c  data_uploader_service.c  dht22_service.c  http_uploader_service.c  light_sensor_service.c  mjpeg_service.c  uart_service.c  wifi_service.c
components/utils/: CMakeLists.txt  Kconfig  ble_format_utils.h
components/utils/include/utils/: ble_format_utils.h  cache.h  config.h  json_utils.h  log.h  log_wrapper.h
components/utils/src/: ble_format_utils.c  cache.c  json_utils.c
docs/: _sidebar.md  camera_index.md  camera_module.md  cpp_refactor.md  getting_started.md  how_to_add_sensor.md  index.html  index.md
main/: CMakeLists.txt  json_utils.h  main.c  uart_handler.c  uart_handler.h  wifi_manager.c  wifi_manager.h
main/OTA/: esp_https_ota.c  esp_https_ota.h  https_ota_service.c
main/backup/: ble_service.c  main_past.c
main/bsp/: uart_handler.h  wifi_manager.c  wifi_manager.h
main/https_client/: https_post.c
main/service/: ble_service.c  ble_service.h  data_reporter.c  light_sensor_service.c  light_sensor_service.h  uart_service.h  wifi_service.h
main/utils/: ble_format_utils.c  json_utils.h
server/: CMakeLists.txt  README_SERVER.md  README_SERVER_CN.md  auto_build.sh  cert.pem  firmware.sha256  https_server.c  key.pem  make-certs.sh  test_func.sh  viewer.py
server/include/server/: config.h  file_store.h  handlers.h  log.h  router.h  ssl_server.h
server/src/: main.c  router.c
server/src/handlers/: data_handler.c  image_handler.c  ota_handler.c  sha256_handler.c  status_handler.c
server/src/net/: ssl_server.c
server/src/storage/: file_store.c  index.c
server/tests/: test_image_post.sh
test/: CMakeCache.txt  CMakeLists.txt  test_ble.c
test/host/: run.sh  test_cpp_layer.cpp
test/host/shim/: esp_camera.h  esp_log.h  esp_system.h  esp_task_wdt.h  esp_timer.h  sdkconfig.h
test/host/shim/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
test/unity/examples/example_2/test/test_runners/: TestProductionCode2_Runner.c  TestProductionCode_Runner.c
