cmake_minimum_required(VERSION 3.5)
project(test_ble_format)

# æ·»åŠ æµ‹è¯•æ–‡ä»¶å’Œå¾…æµ‹æ¨¡å?
add_executable(test_ble
    test_ble.c
    ../main/utils/ble_format_utils.c
)

# æ·»åŠ å¤´æ–‡ä»¶è·¯å¾?
target_include_directories(test_ble PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ../main/utils
    unity/src
)
